--- a/circle.yml
+++ b/circle.yml
@@ -27,13 +27,6 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
       - run:
           name: install dependencies
           command: |
@@ -41,12 +34,11 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt flake8
 
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
-
-      - run: make ci
+      - run:
+          name: run test
+          command: |
+            . venv/bin/activate
+            make ci
 
       - store_artifacts:
           path: test-reports
